syntax = "proto3";

package supervisor.v1;

option go_package = "backend/gen/supervisor/v1;supervisorv1";

import "types/v1/types.proto";

message PingRequest {
  string text = 1;
}
message PingResponse {
  string text = 1;
}

message RecordOperationRequest {
  types.v1.Operation operation = 1;
}
message RecordOperationResponse {}

service SupervisorService {
  rpc Ping(PingRequest) returns (PingResponse) {};

  rpc RecordOperation(RecordOperationRequest) returns (RecordOperationResponse) {};
}