syntax = "proto3";

package user.v1;

option go_package = "backend/gen/user/v1;userv1";

import "types/v1/types.proto";

message PingRequest {
  string text = 1;
}
message PingResponse {
  string text = 1;
}

message GetAccountRequest {};
message GetAccountResponse {
  types.v1.Account account = 1;
};

message GetProfileRequest {
  string user_id = 1;
};
message GetProfileResponse {
  types.v1.Profile profile = 1;
};

service UserService {
  rpc Ping(PingRequest) returns (PingResponse) {};

  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {};
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse) {};
}